Bug 595525 - Double data deletion in streamTest (nptest.cpp), test_streamNotify.html, r=josh, a=blocking:betaN+